Name:           http-proxy
Version:        0.1
License:        BSD3
License-file:   LICENSE
Author:         Michael Snoyman, Erik de Castro Lopo
Maintainer:     erikd@mega-nerd.com
Homepage:       https://github.com/erikd/http-proxy
Bug-reports:    https://github.com/erikd/http-proxy/issues
Category:       Web
Build-Type:     Simple
Cabal-Version:  >=1.8
Stability:      Experimental

Synopsis:       A library for writing HTTP and HTTPS proxies

Description:
  http-proxy is a library for writing HTTP and HTTPS proxies.
  .
  Use of the Conduit library provides file streaming via the proxy in both
  directions. Memory usage of the proxy scales linearly with the number of
  simultaneous connections and is independent of the size of the files being
  uploaded or downloaded.
  .
  The Settings data type provided by the library allows the caller to supply
  a functions for exception reporting and request re-writing.  Eventually, this
  capability will be expanded to allow optional logging, disk caching etc.

Library
  Build-Depends:     base
                   , async
                   , blaze-builder
                   , bytestring
                   , bytestring-lexing
                   , case-insensitive
                   , conduit
                   , conduit-extra
                   , http-client
                   , http-conduit
                   , http-types
                   , mtl
                   , network
                   , resourcet
                   , tls
                   , text
                   , transformers
                   , wai
                   , wai-conduit
                   , warp
                   , warp-tls

  Exposed-modules:   Network.HTTP.Proxy
  Other-modules:     Network.HTTP.Proxy.Request

  ghc-options:       -Wall -fwarn-tabs
  if os(windows)
      Cpp-options: -DWINDOWS

Test-Suite testsuite
  Type: exitcode-stdio-1.0
  Main-is: Test/testsuite.hs
  build-depends:     base
                   , async
                   , blaze-builder
                   , bytestring
                   , bytestring-lexing
                   , case-insensitive
                   , conduit
                   , connection
                   , conduit-extra
                   , http-client
                   , http-conduit
                   , http-types
                   , hspec
                   , network
                   , QuickCheck
                   , random
                   , resourcet
                   , text
                   , vault
                   , wai
                   , wai-conduit
                   , warp
                   , warp-tls

  Other-modules:     Test.Gen
                   , Test.Request
                   , Test.ServerDef
                   , Test.TestServer
                   , Test.Util
                   , Test.Wai

  ghc-options:       -Wall -fwarn-tabs
  if os(windows)
      Cpp-options: -DWINDOWS

source-repository head
  type:     git
  location: https://github.com/erikd/http-proxy.git
